deployments/grpc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-service
  labels:
    app: grpc-server
spec:
  selector:
    app: grpc-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 50051
  type: ClusterIP
