deployments/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grpc-virtual-service
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/grpc-gateway
  http:
    - match:
        - uri:
            prefix: "/pokemon/" # Match gRPC transcoding path
      route:
        - destination:
            host: grpc-service
            port:
              number: 80
